[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["./", "./examples/simple"]

[dependencies]
log = "0.4.20"
scraper = "0.17.1"
html5ever = "0.26"
url = "2.4.1"
reqwest = "0.11.20"
bytes = "1.5.0"
thiserror = "1.0.48"
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
strum_macros = "0.25.2"
strum = "0.25.0"
font-kit = "0.11.0"
fontdue = "0.7.3"
bytesize = "1.3.0"
cgmath = "0.18.0"
ego-tree = "0.6.2"
css-color = "0.2.5"
